--- a/ExamenPrograProm1Individual/ExamenPrograProm1Individual.csproj
+++ b/ExamenPrograProm1Individual/ExamenPrograProm1Individual.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arcilla.cs" />
+    <Compile Include="Productos.cs" />
+    <Compile Include="Tela.cs" />
+    <Compile Include="Tienda.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
